--- a/includes/css/brp/carousel.less
+++ b/includes/css/brp/carousel.less
@@ -148,6 +148,7 @@
         }
         .bx-caption {
             span {
+                font-size: 12px;
             }
         }
     }
