--- a/includes/css/brp/lightbox.less
+++ b/includes/css/brp/lightbox.less
@@ -82,9 +82,10 @@
 	    background: none;
     	.featherlight-content {
     		margin: 0;
-    		height: 100%;
+    		//height: 100%;
     		width: 100%;
     		padding: floor(@default-padding / 2) @default-padding @default-padding;
+    		margin-top: @default-padding * 2;
     		.media-heading{
     		    margin: 0 0 @default-padding 0;
     		}
