--- a/includes/css/brp/slides.less
+++ b/includes/css/brp/slides.less
@@ -89,14 +89,14 @@
 
 @media (max-width: @screen-tablet) {
     .slide{
-
+        width: 100%;
         .caption{
             padding-bottom:0;
             height: 100%;
             overflow:hidden;
             > img{
                 .make-row();
-                left: -50%;
+                left: -75%;
                 min-width: 100%;
                 //max-width: 100%;
                 position: relative;
