--- a/includes/css/brp/thumbnails.less
+++ b/includes/css/brp/thumbnails.less
@@ -35,10 +35,10 @@
      .thumbnail {
          .media;
         float:none !important;
-        margin: 0 -(@default-padding * 2) @default-padding -(@default-padding * 2);
+        margin: 0 -(@default-padding) @default-padding;
         .clearfix;
         width: auto;
-        padding-bottom: 0;
+        padding-bottom: @default-padding;
         a{
             &:hover img,
             &:focus img{
