--- a/includes/css/brp/type.less
+++ b/includes/css/brp/type.less
@@ -88,9 +88,9 @@ h6, .h6 { font-size: @font-size-base; }
     h1, .h1 { font-size: floor(@font-size-base * 1.6); font-weight: 700; }
     h2, .h2 { font-size: floor(@font-size-base * 1.4); font-weight: 700; }
     h3, .h3 { font-size: ceil(@font-size-base * 1.25); font-weight: 700; }
-    h4, .h4 { font-size: ceil(@font-size-base * 1); font-weight: 700; }
-    h5, .h5 { font-size: ceil(@font-size-base * .85); font-weight: 700; }
-    h6, .h6 { font-size: ceil(@font-size-base * .75); font-weight: 700; }
+    h4, .h4 { font-weight: 700; }
+    h5, .h5 { font-weight: 700; }
+    h6, .h6 { font-weight: 700; }
     p { font-size: ceil(@font-size-base * .75); }
 }
 
